<resources>
	<string name="app_name">MedExpertz-Doctor</string>
	<string name="med_expertz">MedExpertz</string>
	<string name="book_online_any_time_anywhere">Book online. Anytime Anywhere</string>
	<string name="email">Email</string>
	<string name="password">Password</string>
	<string name="forgot_password">Forgot Password?</string>
	<string name="sign_in">Sign In</string>
	<string name="dont_have_account">Don’t Have Account?</string>
	<string name="sign_up">Sign up</string>
	<string name="username">Username</string>
	<string name="email_id">Email id</string>
	<string name="qualification">Qualification</string>
	<string name="specialization">Specialization</string>
	<string name="next">Next</string>
	<string name="experience">Experience</string>
	<string name="licenseNumber">Medical License Number</string>
	<string name="consultation_fee">Consultation fee</string>
	<string name="confirm_password">Confirm Password</string>
	<string name="submit">Submit</string>
	<string name="title_activity_home">HomeActivity</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Android Studio</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>
	<string name="lorem_ipsum">Lorem Ipsum is simply dummy text of</string>
	<string name="logout">Logout</string>
	<string name="share">Share</string>
	<string name="privacy">Privacy</string>
	<string name="contact_us">Contact us</string>
	<string name="terms_and_conditions">Terms &amp; Conditions</string>
	<string name="write_prescription">Write Prescription</string>
	<string name="profile">Profile</string>
	<string name="action_notification">Notification</string>
	<string name="book_for">Book For</string>
	<string name="view_document">View Document</string>
	<string name="document">Document</string>
	<string name="age">Age</string>
	<string name="gender">Gender</string>
	<string name="date">Date</string>
	<string name="time">Time</string>
	<string name="symptoms">Symptoms</string>
	<string name="accept">Accept</string>
	<string name="reject">Reject</string>
	<string name="no_internet">No internet connection</string>
	<string name="invalid_email">Invalid Email</string>
	<string name="invalid_password">Minimum 6 characters</string>
	<string name="name">Name</string>
	<string name="mobile">Mobile</string>
	<string name="something_went_wrong">Oops! Something went wrong. Please try again</string>
	<string name="upload_error">Error uploading image. Please try again</string>
	<string name="education">Education</string>
	<string name="timing">Timing</string>
	<string name="permission_denied">Please grant required permission</string>
	<string name="format_dob">%1$d-%2$02d-%3$02d</string>
	<string name="country">Country</string>
	<string name="format_country">%1$s&#032;&#032;&#032;&#032;&#032;&#032;%2$s</string>
	<string name="done">Done</string>
	<string name="select_country">Select Country</string>
	<string name="language">Language</string>
	<string name="male">male</string>
	<string name="female">female</string>
	<string name="successfully_logged_in">Successfully logged in</string>
	<string name="duplicate_account">Email or Mobile number already exists!</string>
	<string name="incorrect_email_or_password">Incorrect email or password</string>
	<string name="no_appointments">No appointments yet</string>
	<string name="video">Video</string>
	<string name="audio_call">Audio call</string>
	<string name="cancel_title">Are you Sure want to cancel Appointment?</string>
	<string name="select_reason">Please select a reason</string>
	<string name="rejected_appointment">Appointment rejected!!!</string>
	<string name="add_medicine">Add Medicine</string>
	<string name="search_medicine_here">Search medicine here</string>
	<string name="no_of_tablet">No. Of Tablet</string>
	<string name="morning">Morning</string>
	<string name="evening">Evening</string>
	<string name="afternoon">Afternoon</string>
	<string name="before_food">Before Food</string>
	<string name="add_lab_test">Add Lab Test</string>
	<string name="add_summary">Add Summary</string>
	<string name="start_write_from_here">Start Write From Here</string>
	<string name="medicine">Medicine</string>
	<string name="after_food">After Food</string>
	<string name="add">Add</string>
	<string name="title_logout">Logout?</string>
	<string name="msg_logout">Are you sure you wish to logout from app?</string>
	<string name="cancel">Cancel</string>
	<string name="incomplete_prescription">Incomplete prescription</string>
	<string name="medicine_updated">Medicine updated</string>
	<string name="search_here">Search here</string>
	<string name="no_prescription">No prescriptions!</string>
	<string name="search_lab_test_here">Search lab tests here</string>
	<string name="comments">Comments</string>
	<string name="lab_tests">Lab Tests</string>
	<string name="summary">Summary</string>
	<string name="summary_updated">Summary updated</string>
	<string name="delete">Delete</string>
	<string name="medicine_deleted">Medicine deleted</string>
	<string name="lab_test_deleted">Lab test deleted</string>
	<string name="change_slot">Change slot</string>
	<string name="add_slot">Add Timing slot</string>
	<string name="available_slot">Available Slot</string>
	<string name="cannot_go_to_past">Cannot reshedule it to past</string>
	<string name="no_available_time_slots">No available time slots</string>
	<string name="save">Save</string>
	<string name="notification">Notification</string>
	<string name="no_notifications">No notifications!</string>
	<string name="verification_done_for">Verification Done For</string>
	<string name="medical_condition">Medical Condition</string>
	<string name="allergies">Allergies</string>
	<string name="version_name">v%s</string>
    <string name="text_from">Start time</string>
	<string name="text_from_time">Select from time</string>
	<string name="duration_for_each_consultant">Duration for each consultation in minute</string>
	<string name="text_to_time">Select to time</string>
    <string name="text_time">Select time</string>
    <string name="default_notification_channel_id">1234</string>
	<string name="viewadd_timeslot">View/Add Timeslot</string>
	<string name="timinglist">Timing List</string>
    <string name="text_to">End time</string>
    <string name="viewadd_weekdays">Consultation off</string>
    <string name="updated">Update</string>
    <string name="passwordsenttoyoyrmail">Password sent to your Email id</string>
	<string name="getpassword">Get Password</string>
    <string name="chatwith_patient">Chat with patient</string>
	<string name="chatwith_expert">Chat with expert</string>
	<string name="no_conversation_start_chatting_now">Write something to start conversation</string>
</resources>
