<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20sp">

    <TextView
        android:id="@+id/logoutTextVew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_logout"
        android:textColor="#000000"
        android:textSize="20sp"
        android:fontFamily="@font/proxima_nova_regular"/>
    <TextView
        android:id="@+id/logoutDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/logoutTextVew"
        android:text="@string/msg_logout"
        android:fontFamily="@font/proxima_nova_regular"
        android:textSize="14sp"
        android:textColor="#000000"
        app:layout_constraintLeft_toLeftOf="@+id/logoutTextVew"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/logoutTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/logout"
        app:layout_constraintTop_toBottomOf="@+id/logoutDesc"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:fontFamily="@font/proxima_nova_regular"/>

    <TextView
        android:id="@+id/cancelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@+id/logoutDesc"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        app:layout_constraintRight_toLeftOf="@+id/logoutTV"
        android:fontFamily="@font/proxima_nova_regular"/>

</android.support.constraint.ConstraintLayout>