<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fromtimeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/text_from"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/fromTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_from_time"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:paddingBottom="7dp"
        android:paddingTop="7dp"
        android:paddingRight="14dp"
        android:paddingLeft="14dp"
        android:gravity="center"
        android:background="@drawable/draw_rect_stroke_7f000000_r3"
        app:layout_constraintTop_toBottomOf="@+id/fromtimeTV"/>
    <TextView
        android:id="@+id/totimeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/text_to"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@+id/fromTimeValue"/>
    <TextView
        android:id="@+id/toTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_to_time"
        android:layout_marginTop="3dp"
        android:paddingBottom="7dp"
        android:paddingTop="7dp"
        android:paddingRight="14dp"
        android:paddingLeft="14dp"
        android:gravity="center"
        android:background="@drawable/draw_rect_stroke_7f000000_r3"
        app:layout_constraintTop_toBottomOf="@+id/totimeTV"
        app:layout_constraintLeft_toLeftOf="@+id/totimeTV"/>
    <!--<TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        app:layout_constraintTop_toBottomOf="@+id/fromtimeTV"></TimePicker>
-->

    <TextView
        android:id="@+id/textTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/fromTimeValue"
        android:text="@string/duration_for_each_consultant"
        app:layout_constraintLeft_toLeftOf="@+id/fromTimeValue"
        android:layout_marginTop="15dp"/>
    <EditText
        android:id="@+id/durationTV"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:inputType="number"
        android:paddingLeft="15dp"
        android:background="@drawable/draw_rect_stroke_7f000000_r3"
        app:layout_constraintTop_toBottomOf="@+id/textTV"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"/>
    <Button
        android:id="@+id/okButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/durationTV"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="16sp"
        android:text="Ok"
        android:background="@drawable/draw_rect_green_c3"
        android:textAllCaps="true"/>
</android.support.constraint.ConstraintLayout>