<?xml version="1.0" encoding="utf-8"?>
<layout>
	<!--suppress AndroidUnknownAttribute -->
	<data class=".Profile1FragmentBinding">
		<import type="android.view.View"/>
		<import type="com.medexpertz.medexpertzdoctor.auth.AuthState"/>
		<import type="com.amazonaws.mobileconnectors.s3.transferutility.TransferState"/>

		<variable name="validate" type="Boolean"/>
		<variable name="profile" type="com.medexpertz.medexpertzdoctor.auth.Profile"/>
		<variable name="handler" type="com.medexpertz.medexpertzdoctor.auth.Profile1Fragment"/>
		<variable name="state" type="com.medexpertz.medexpertzdoctor.auth.AuthState"/>
		<variable name="transferState" type="TransferState"/>
		<variable name="transferProgress" type="Float"/>
	</data>

	<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/draw_rect_gradient_17845d_01c853">

		<TextView
			android:id="@+id/titleLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="24dp"
			android:fontFamily="@font/cambria_bold"
			android:text="@string/med_expertz"
			android:textColor="#ffffff"
			android:textSize="40sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>

		<TextView
			android:id="@+id/contentLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="@font/cambria"
			android:text="@string/book_online_any_time_anywhere"
			android:textColor="#ffffff"
			android:textSize="12sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/titleLabel"/>

		<ImageView
			android:id="@+id/avatarIV"
			android:layout_width="94dp"
			android:layout_height="94dp"
			android:layout_marginTop="24dp"
			android:contentDescription="@null"
			android:error="@{@drawable/art_avatar_white_93dp}"
			android:onClick="@{()->handler.onAvatar()}"
			android:url="@{profile.profilePic}"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/contentLabel"
			tools:src="@drawable/art_avatar_white_93dp"/>

		<com.github.lzyzsd.circleprogress.DonutProgress
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:donut_progress="@{transferProgress}"
			android:visibility="@{transferState == TransferState.IN_PROGRESS ? View.VISIBLE : View.GONE}"
			app:donut_circle_starting_degree="270"
			app:donut_finished_color="@color/colorPrimary"
			app:donut_finished_stroke_width="4dp"
			app:donut_text_color="@color/white"
			app:donut_text_size="12dp"
			app:donut_unfinished_color="@color/white"
			app:donut_unfinished_stroke_width="4dp"
			app:indicatorName="BallSpinFadeLoaderIndicator"
			app:layout_constraintBottom_toBottomOf="@id/avatarIV"
			app:layout_constraintEnd_toEndOf="@id/avatarIV"
			app:layout_constraintStart_toStartOf="@id/avatarIV"
			app:layout_constraintTop_toTopOf="@id/avatarIV"/>

		<android.support.v7.widget.AppCompatEditText
			android:id="@+id/nameET"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="28dp"
			android:layout_marginStart="28dp"
			android:layout_marginTop="32dp"
			android:background="@drawable/draw_rect_4c000000_r26"
			android:enabled="@{state != AuthState.LOADING}"
			android:hint="@string/name"
			android:inputType="textPersonName|textCapWords"
			android:paddingBottom="12dp"
			android:paddingEnd="8dp"
			android:paddingStart="29dp"
			android:paddingTop="12dp"
			android:text="@={profile.name}"
			android:textColor="@color/white"
			android:textColorHint="#7fffffff"
			android:textSize="16sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/avatarIV"/>

		<android.support.v7.widget.AppCompatEditText
			android:id="@+id/mobileET"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="28dp"
			android:layout_marginStart="28dp"
			android:layout_marginTop="20dp"
			android:background="@drawable/draw_rect_4c000000_r26"
			android:enabled="@{state != AuthState.LOADING}"
			android:error="@{validate &amp;&amp; !profile.emailValid ? @string/invalid_email : null}"
			android:hint="@string/mobile"
			android:inputType="phone"
			android:paddingBottom="12dp"
			android:paddingEnd="8dp"
			android:paddingStart="29dp"
			android:paddingTop="12dp"
			android:text="@={profile.mobile}"
			android:textColor="@color/white"
			android:textColorHint="#7fffffff"
			android:textSize="16sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/nameET"/>

		<android.support.v7.widget.AppCompatEditText
			android:id="@+id/emailET"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="28dp"
			android:layout_marginStart="28dp"
			android:layout_marginTop="20dp"
			android:background="@drawable/draw_rect_4c000000_r26"
			android:enabled="@{state != AuthState.LOADING}"
			android:error="@{validate &amp;&amp; !profile.emailValid ? @string/invalid_email : null}"
			android:hint="@string/email_id"
			android:inputType="textEmailAddress"
			android:paddingBottom="12dp"
			android:paddingEnd="8dp"
			android:paddingStart="29dp"
			android:paddingTop="12dp"
			android:text="@={profile.email}"
			android:textColor="@color/white"
			android:textColorHint="#7fffffff"
			android:textSize="16sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/mobileET"/>

		<android.support.v7.widget.AppCompatEditText
			android:id="@+id/passwordET"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="28dp"
			android:layout_marginStart="28dp"
			android:layout_marginTop="20dp"
			android:background="@drawable/draw_rect_4c000000_r26"
			android:enabled="@{state != AuthState.LOADING}"
			android:hint="@string/password"
			android:inputType="textPassword"
			android:paddingBottom="12dp"
			android:text="@={profile.password}"
			android:paddingEnd="33dp"
			android:paddingStart="29dp"
			android:paddingTop="12dp"
			android:textColor="@color/white"
			android:textColorHint="#7fffffff"
			android:textSize="16sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/emailET"/>

		<TextView
			android:id="@+id/genderLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="@font/proxima_nova_semi_bold"
			android:text="@string/gender"
			android:textColor="#ffffff"
			android:textSize="18sp"
			app:layout_constraintBottom_toBottomOf="@+id/genderRG"
			app:layout_constraintStart_toStartOf="@id/passwordET"
			app:layout_constraintTop_toTopOf="@id/genderRG"/>

		<RadioGroup
			android:id="@id/genderRG"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:onCheckedChanged="@{(group, id)-> handler.setGender(id)}"
			android:orientation="horizontal"
			app:layout_constraintEnd_toEndOf="@id/passwordET"
			app:layout_constraintStart_toEndOf="@id/genderLabel"
			app:layout_constraintTop_toBottomOf="@id/passwordET">

			<android.support.v7.widget.AppCompatRadioButton
				android:id="@+id/maleRB"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="@font/proxima_nova_semi_bold"
				android:text="@string/male"
				android:textColor="@color/white"
				android:textSize="16sp"
				app:buttonTint="@color/white"/>

			<android.support.v7.widget.AppCompatRadioButton
				android:id="@+id/femaleRB"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="46.7dp"
				android:fontFamily="@font/proxima_nova_semi_bold"
				android:text="@string/female"
				android:textColor="@color/white"
				android:textColorHint="@color/white"
				android:textSize="16sp"
				app:buttonTint="@color/white"/>
		</RadioGroup>

		<android.support.v7.widget.CardView
			android:id="@+id/signInCV"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="28dp"
			android:layout_marginStart="28dp"
			android:onClick="@{()->handler.onNext()}"
			app:cardCornerRadius="26dp"
			app:contentPadding="16dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/genderRG">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:fontFamily="@font/proxima_nova_bold"
				android:text="@string/next"
				android:textAllCaps="true"
				android:textColor="@color/colorPrimary"
				android:textSize="16sp"/>
		</android.support.v7.widget.CardView>
	</android.support.constraint.ConstraintLayout>
</layout>